# particleArt

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  fix_background.py  generate_images.py  generate_modal.py  generate_modal_adamw.py  generate_modal_sweep.py  main.py  normalize_backgrounds.py  plan.md  postprocess.py  pyproject.toml  rename_images.py  requirements-server.txt  serve_local.py  serve_modal.py  server.py  test_prompt.py  test_sdxl.py  train_lora_sdxl.py  train_modal.py  train_modal_adamw.py  upload_to_hf.py
inference/: config.py  pipeline.py
terraform/aws/: README.md  main.tf  outputs.tf  variables.tf
web/: index.html
