[project]
name = "particleart"
version = "0.1.0"
description = "Particle art generation — SDXL LoRA for abstract human figures made of dots"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.0",
    "huggingface-hub[cli]>=1.6.0",
    "openai>=2.26.0",
    "safetensors>=0.7.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "fastapi[standard]>=0.115.0",
    "peft>=0.13.0",
    "httpx>=0.28.1",
]
